# crates

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  bacon.toml  deny.toml  rustfmt.toml
.sqlx/: query-00badf482faf43267fb20607948752361986c25f219d3df98ed076b086de7ca4.json  query-083958604e0d3705655fa0bec3a85b3656baf8ec29006c0f2782c61571df13ac.json  query-0cae05cdf6723aee07b8652114c28b78960842dbbda75ab7125ab4d11829a03d.json  query-11e12323a1d6d0f57e420d3a3b92a2acd1ff899859e2bf4a1869083e88c73cf3.json  query-14674613e146a6d88f68d9ef0290b926ce70ab6476ef9daecb9dcadf9c8d2684.json  query-14839f156e9c380d20a0e51075b7c4e55c09fcbdc70a2411990b3dcf2d65812c.json  query-2efa711b25ddbe077bbde4ac922ed77da2e769e37b3a131bc4833301b2f75202.json  query-368a044de0b56f1f09fd8917d141e6936618bf6b0d1bc87dd138309fed7ea5fb.json  query-3e14f688900f51bd8c4fff8bdaa415c103c5f2784847236b3359a81e947baa7f.json  query-4154356950e2842284656274cbd48b9e8b02c44aabc19bb733fab1a50ab02806.json  query-58ed37f2d8e87c430c204b6b590193ae0b02d5e891bbceb9ff58c2de0fa77a71.json  query-5959c44f9ef6db66cb7e8d9eb11f28805041893d060522d293b796b25f79b981.json  query-5bddb1405b566f83cbcfbb0ff5aa4b1fbe0ffd4d72a298007debfee8df27c757.json  query-604cdcd44b2e9a88580993eaf362fce87e9749dd8cfc39557f60659821194e7c.json  query-61784962aa720642b12bce752b6273b9c57b1b4849e50a3447fe0e0590557c25.json  query-6a7e835ca02d4fcf395124ac7eb3f886f430729183d225915dfe860d9bd1ae93.json  (+26 more)
crates/bunyan_log_monitor/: Cargo.toml
crates/bunyan_log_monitor/src/: cli.rs  log_info.rs  main.rs
crates/chat-app-client/: Cargo.toml  Trunk.toml  index.html
crates/chat-app-client/assets/: manifest.json  sw.js
crates/chat-app-client/src/: app.rs  background_worker.rs  cli.rs  lib.rs  lockout.rs  main.rs  pages.rs  shortcuts.rs  tracing.rs  ui_helpers.rs  visuals.rs
crates/chat-app-client/src/app/: data_shared.rs
crates/chat-app-client/src/pages/: change_password.rs  chat.rs  data_state.rs  egui_settings.rs  login.rs  macros.rs  uac.rs
crates/chat-app-client/src/pages/chat/: frontend.rs
crates/chat-app-client/src/pages/chat/frontend/: connected_users.rs
crates/chat-app-client/src/pages/uac/: edit_user_info.rs  new_user_info.rs  pass_reset_user_info.rs
crates/chat-app-server/: .env  Cargo.toml
crates/chat-app-server/configuration/: base.toml  local.toml  production.toml
crates/chat-app-server/migrations/: 20240101000000_legacy.sql  20240424012241_add_user_password_hash.sql  20240713130941_seed_for_first_login.sql  20240908184200_chat.sql
crates/chat-app-server/migrations_mysql/: 20240101000000_legacy.sql  20240424012241_add_user_password_hash.sql  20240713130941_seed_for_first_login.sql  20240908184200_chat.sql  20250119164016_branch_short_name.sql  20250120103015_seed_for_first_login.sql
crates/chat-app-server/migrations_pg/: 20240101000000_legacy.sql  20240713130941_seed_for_first_login.sql  20240908184200_chat.sql  20250119164016_branch_short_name.sql  20250120103015_seed_for_first_login.sql
crates/chat-app-server/scripts/: init_db.sh  init_db_mysql.sh  init_db_pg.sh  init_redis.sh
crates/chat-app-server/src/: lib.rs  main.rs  permissions.rs  startup.rs  websocket.rs
crates/chat-app-server/tests/api/: branch.rs  change_password.rs  chat.rs  health_check.rs  helpers.rs  host_branch.rs  login.rs  main.rs  permissions.rs  roles.rs  users.rs  web_sockets.rs
crates/chat-app-server/tests/api/snapshots/: api__users__list_users_and_roles.snap  api__users__user.snap
crates/db-types/: Cargo.toml
crates/db-types/src/: db_types_postgres.rs  lib.rs
crates/plugin-chat/: Cargo.toml
crates/plugin-chat/src/: consts.rs  lib.rs  msg_types.rs  server_only.rs
crates/plugin-chat/src/server_only/: client_control_loop.rs  connections.rs  history.rs  plugin_impl.rs  server.rs  server_handler.rs
crates/switch-db/: Cargo.toml
crates/switch-db/src/: cli.rs  lib.rs
crates/tracked-cancellations/: Cargo.toml
crates/tracked-cancellations/src/: lib.rs
crates/ws-auth/: Cargo.toml
crates/ws-auth/src/: errors.rs  handlers.rs  id.rs  lib.rs  manager.rs  runtime_utils.rs  traits.rs
crates/ws-helpers/: Cargo.toml
crates/ws-helpers/src/: client_control_loop.rs  heartbeat.rs  lib.rs  settings.rs
crates/wykies-client-core/: Cargo.toml
crates/wykies-client-core/src/: ca.pem  client.rs  error_helpers.rs  lib.rs
crates/wykies-client-core/src/client/: api.rs  websocket.rs
crates/wykies-client-core/src/client/api/: admin.rs  branch.rs  host_branch.rs  role.rs  user.rs
crates/wykies-client-core/src/client/api/admin/: branch.rs  host_branch.rs  role.rs  user.rs
crates/wykies-client-core/tests/: web_login.rs
crates/wykies-server/: .env  Cargo.toml
crates/wykies-server-test-helper/: .env  Cargo.toml
crates/wykies-server-test-helper/src/: lib.rs  macros.rs
crates/wykies-server/src/: authentication.rs  configuration.rs  db_types.rs  db_types_mysql.rs  db_utils.rs  init.rs  lib.rs  macros.rs  plugin.rs  routes.rs  session_state.rs  startup.rs  tls.rs  ws.rs
crates/wykies-server/src/authentication/: middleware.rs  password.rs
crates/wykies-server/src/routes/: admin.rs  branch.rs  health_check.rs  host_branch.rs  login.rs  logout.rs  password.rs  role.rs  status.rs  user.rs
crates/wykies-server/src/routes/admin/: branch.rs  host_branch.rs  role.rs  user.rs
crates/wykies-server/src/ws/: heartbeat.rs
crates/wykies-shared/: Cargo.toml
crates/wykies-shared/src/: branch.rs  const_config.rs  error_wrappers.rs  errors.rs  host_branch.rs  id.rs  lib.rs  macros.rs  macros_debugging.rs  macros_enums.rs  macros_wrappers.rs  random.rs  req_args.rs  session.rs  telemetry.rs  token.rs  uac.rs  websockets.rs  wrapper_macros.rs
crates/wykies-shared/src/const_config/path/: path_spec.rs
crates/wykies-shared/src/req_args/: api.rs
crates/wykies-shared/src/req_args/api/: admin.rs  role.rs  user.rs
crates/wykies-shared/src/req_args/api/admin/: host_branch.rs  role.rs  user.rs
crates/wykies-shared/src/uac/: errors.rs  passwords.rs  permissions.rs  responses.rs  role.rs  user.rs
crates/wykies-time/: Cargo.toml
crates/wykies-time/src/: lib.rs
(+76 files in other folders)
