[workspace]
resolver = "2"
members = [
  # "crates/bunyan_log_monitor", # TODO 2: restore to work on notification program
  "crates/chat-app-client",
  "crates/chat-app-server",
  "crates/db-types",
  "crates/egui-helpers",
  "crates/egui-pages",
  "crates/plugin-chat",
  "crates/switch-db",
  "crates/tracked-cancellations",
  "crates/ws-auth",
  "crates/ws-helpers",
  "crates/wykies-client-core",
  "crates/wykies-server",
  "crates/wykies-server-test-helper",
  "crates/wykies-shared",
  "crates/wykies-time",
]

[workspace.dependencies]
# TODO 4: Write a program to check a workspace to see if all dependencies are needed by comparing to Cargo files in member crates
actix-cors = "0.7.1"
actix-files = "0.6.10"
actix-session = "0.11.0"
actix-web = { version = "4.14.0", features = ["rustls-0_23"] }
actix-ws = "0.4.0"
anyhow = "1.0.103"
argon2 = "0.5.3"
bytestring = "1.5.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
clap = "4.6.1"
config = { version = "0.15.25", default-features = false, features = ["toml"] }
db-types = { version = "*", path = "crates/db-types", default-features = false }
eframe = { version = "0.35.0", default-features = false }
egui = { version = "0.35.0", default-features = false }
egui-helpers = { version = "*", path = "crates/egui-helpers" }
egui-pages = { version = "*", path = "crates/egui-pages" }
egui_extras = "0.35.0"
ewebsock = { version = "0.8.0", features = ["tls"] }
futures-util = "0.3.32"
insta = "1.48.0"
lettre = "0.11.22"
log = "0.4.33"
plugin-chat = { version = "*", path = "crates/plugin-chat" }
pretty_assertions = "1.4.1"
rand = "0.10.2"
regex = "1.13.0"
reqwest-cross = { version = "0.12.0", default-features = false, features = ["native-tokio", "json", "cookies", "http2", "rustls", "query"] }
ringbuffer = "0.16.0"
ron = "0.12.2"
rstest = "0.26.1"
rustls = "0.23.42"
rustls-pki-types = "1.15.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.150"
sqlx = { version = "0.9.0", default-features = false }
static_assertions = "1.1.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false }
tokio-tungstenite = { version = "0.30.0", default-features = false, features = ["rustls-tls-native-roots"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-actix-web = "0.7.22"
tracing-appender = "0.2.5"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "json"] }
tracked-cancellations = { version = "*", path = "crates/tracked-cancellations" }
uuid = { version = "1.23.5", features = ["v4", "serde", "rng-getrandom"] }
version-control-clean-check = "0.1.4"
wasm-bindgen-test = "0.3.76"
web-sys = "0.3.103"
web-time = "1.1.0"
ws-auth = { version = "*", path = "crates/ws-auth" }
ws-helpers = { version = "*", path = "crates/ws-helpers" }
wykies-client-core = { version = "*", path = "crates/wykies-client-core" }
wykies-server = { version = "*", path = "crates/wykies-server", default-features = false }
wykies-server-test-helper = { version = "*", path = "crates/wykies-server-test-helper" }
wykies-shared = { version = "*", path = "crates/wykies-shared" }
wykies-time = { version = "*", path = "crates/wykies-time" }

[profile.release]
opt-level = 2 # fast and small wasm

# https://doc.rust-lang.org/cargo/reference/overriding-dependencies.html#testing-a-bugfix
[patch.crates-io]
