[package]
name = "bunyan_log_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["clock", "serde"] }
clap = { workspace = true, features = ["cargo", "env", "derive", "wrap_help"] }
lettre.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
ron.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
insta = { workspace = true, features = ["redactions", "ron", "serde"] }
