[package]
name = "chat-app-client"
version = "0.1.2"
edition = "2021"
publish = false
description = "EGUI Client for the Demo Chat App"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
eframe = { workspace = true, features = [ # put all features on their own line
  "accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow", # Use the glow rendering backend. Alternative: "wgpu".
  "persistence", # Enable restoring app state when restarting the app.
] }
egui.workspace = true
egui_extras.workspace = true
futures.workspace = true
plugin-chat = { workspace = true, features = ["client_only"] }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
tracing.workspace = true
wykies-client-core.workspace = true
wykies-shared.workspace = true
wykies-time.workspace = true

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true
ewebsock = { workspace = true, features = ["tls", "tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber.workspace = true

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
# console_error_panic_hook = "0.1.6" # TODO 4: Look into this I think it stopped getting used in one of the updates
ewebsock = { workspace = true, features = ["tls"] }
log.workspace = true # Needed to work with eframe::WebLogger
wasm-bindgen-futures = "0.4"
web-sys.workspace = true # to access the DOM (to hide the loading text)
