[package]
name = "chat-app-server"
version = "0.1.0"
edition = "2021"
publish = false
description = "Server for Demo Chat App"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
plugin-chat = { workspace = true, features = ["server_only"] }
serde.workspace = true
sqlx = { workspace = true, features = ["tls-rustls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracked-cancellations.workspace = true
ws-auth.workspace = true
wykies-server.workspace = true
wykies-shared = { workspace = true, features = ["server_only"] }

[dev-dependencies]
chrono.workspace = true
ewebsock.workspace = true
insta = { workspace = true, features = ["serde", "redactions", "json"] }
secrecy.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
wykies-client-core = { workspace = true, features = ["expose_internal"] }
wykies-server-test-helper.workspace = true
wykies-time = { workspace = true, features = ["mysql"] }

[features]
default = []
disable-cors = ["wykies-server/disable-cors"]
