[package]
name = "chat-app-server"
version = "0.1.2"
edition = "2021"
publish = false
description = "Server for Demo Chat App"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
plugin-chat = { workspace = true, features = ["server_only"] }
secrecy.workspace = true
serde.workspace = true
shuttle-runtime = { workspace = true }
shuttle-shared-db = { workspace = true, optional = true, features = ["postgres", "sqlx"] }
sqlx = { workspace = true, features = ["tls-rustls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracked-cancellations.workspace = true
ws-auth.workspace = true
wykies-server.workspace = true
wykies-shared = { workspace = true, features = ["server_only"] }

[dev-dependencies]
chrono.workspace = true
ewebsock.workspace = true
insta = { workspace = true, features = ["serde", "redactions", "json"] }
secrecy.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
wykies-client-core = { workspace = true, features = ["expose_internal"] }
wykies-server-test-helper.workspace = true
wykies-time = { workspace = true }

[features]
default = ["standalone", "mysql"]
disable-cors = ["wykies-server/disable-cors"]
standalone = [
  # Runs the app in the standalone mode (also needs mysql or postgres)
  "wykies-server/redis-session-rustls",
]
shuttle = [
  # Runs the app in the shuttle mode (Uses postgres and cookie's only for sessions)
  "dep:shuttle-shared-db",
  "postgres",
  "wykies-server/cookie-session",
  "wykies-server/running-from-workspace-root",
]
mysql = [
  "plugin-chat/mysql",
  "wykies-server-test-helper/mysql",
  "wykies-server/mysql",
]
postgres = [
  "plugin-chat/postgres",
  "wykies-server-test-helper/postgres",
  "wykies-server/postgres",
]
