[package]
name = "plugin-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true, optional = true }
actix-ws = { workspace = true, optional = true }
anyhow.workspace = true
futures-util = { workspace = true, optional = true }
ringbuffer = { workspace = true, optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
sqlx = { workspace = true, features = ["macros"], optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracked-cancellations = { workspace = true, optional = true }
ws-auth = { workspace = true, optional = true }
wykies-server = { workspace = true, optional = true }
wykies-shared.workspace = true
wykies-time.workspace = true

[dev-dependencies]
static_assertions.workspace = true

[features]
default = []
client_only = []
server_only = [
  "dep:actix-web",
  "dep:actix-ws",
  "dep:futures-util",
  "dep:ringbuffer",
  "dep:sqlx",
  "dep:tokio",
  "dep:tracing",
  "dep:tracked-cancellations",
  "dep:ws-auth",
  "dep:serde_json",
  "dep:wykies-server",
]
