[package]
name = "switch-db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "wrap_help"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
version-control-clean-check = { workspace = true, features = ["clap"] }
