[package]
name = "ws-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web.workspace = true
actix-ws.workspace = true
anyhow.workspace = true
futures-util.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wykies-shared.workspace = true
wykies-time.workspace = true
