[package]
name = "ws-helpers"
version = "0.1.0"
edition = "2021"
description = "To provide reusable functionality across Websocket services"

[dependencies]
actix-ws.workspace = true
anyhow.workspace = true
bytestring.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
wykies-shared.workspace = true
wykies-time.workspace = true
