[package]
name = "wykies-client-core"
version = "0.1.0"
edition = "2021"
publish = false
description = "Stores the functionality common between Clients"

[dependencies]
anyhow.workspace = true
futures.workspace = true
reqwest-cross = { workspace = true, features = ["yield_now"] }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
wykies-shared = { workspace = true, features = ["client_only"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ewebsock = { workspace = true, features = ["tls", "tokio"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
ewebsock = { workspace = true, features = ["tls"] }
getrandom = { workspace = true, features = ["js"] } # This is needed to enable the js feature

[dev-dependencies]
wasm-bindgen-test.workspace = true

[features]
default = []
expose_internal = [] # Makes some private functions public for testing or type extension (Using modules and "expose_internal_" as a prefix for associated functions)
