[package]
name = "wykies-client-core"
version = "0.1.0"
edition = "2021"
publish = false
description = "Stores the functionality common between Clients"

[dependencies]
anyhow.workspace = true
reqwest-cross = { workspace = true, features = ["yield_now"] }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
wykies-shared = { workspace = true, features = ["client_only"] }
wykies-time.workspace = true

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] } # This is needed to enable the js feature
getrandom_old = { workspace = true, features = ["js"] } # TODO 5: Check if this is still needed

[dev-dependencies]
wasm-bindgen-test.workspace = true
wykies-server-test-helper.workspace = true

[features]
default = []
expose_internal = [] # Makes some private functions public for testing or type extension (Using modules and "expose_internal_" as a prefix for associated functions)
