[package]
name = "wykies-server-test-helper"
version = "0.1.0"
edition = "2024"
publish = false
description = "Provides supporting code for running integration tests"

[dependencies]
anyhow.workspace = true
argon2 = { workspace = true, features = ["std"] }
chrono.workspace = true
serde.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "macros", "mysql", "chrono", "migrate"] }
uuid = { workspace = true, features = ["v4", "serde"] }
wykies-server.workspace = true
wykies-shared = { workspace = true, features = ["server_only"] }
wykies-time.workspace = true

[features]
default = []
mysql = []
postgres = []
