[package]
name = "wykies-server"
version = "0.1.0"
edition = "2021"
description = "Reusable Server Functionality for an Actix-Web REST server that needs WebSocket Functionality"

[dependencies]
actix-cors = { workspace = true, optional = true }
actix-files.workspace = true
actix-session = { workspace = true, features = ["redis-session-rustls"] }
actix-web.workspace = true
anyhow.workspace = true
argon2 = { workspace = true, features = ["std"] }
config.workspace = true
rand = { workspace = true, features = ["std_rng"] }
secrecy.workspace = true
serde.workspace = true
serde-aux.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "macros", "mysql", "chrono", "migrate"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-actix-web.workspace = true
tracing-subscriber.workspace = true
tracked-cancellations.workspace = true
ws-auth.workspace = true
wykies-shared = { workspace = true, features = ["server_only"] }
wykies-time.workspace = true

[features]
# TODO 5: Remove MYSQL as default only there for testing
default = ["mysql"] # MySQL is there temporarily
mysql = ["sqlx/mysql", "wykies-shared/mysql"] # Uses MySQL as DB type
disable-cors = ["dep:actix-cors"]
