[package]
name = "wykies-shared"
version = "0.1.0"
edition = "2021"
description = "Code shared between the client and the server"

[dependencies]
# For native compilation only
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
actix-web.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = ["registry", "env-filter"] }
tracing.workspace = true

[features]
default = []
server_only = [] # Used to control things only the server should create
client_only = [] # Used to control things only the client should create
