[package]
name = "wykies-shared"
version = "0.1.0"
edition = "2021"
description = "Code shared between the client and the server"

[dependencies]
anyhow.workspace = true
argon2.workspace = true
chrono.workspace = true
db-types = { workspace = true, optional = true }
egui.workspace = true
ewebsock.workspace = true
rand = { workspace = true, features = ["std_rng"] }
reqwest.workspace = true
ron.workspace = true
secrecy.workspace = true
serde.workspace = true
sqlx = { workspace = true, optional = true }
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
wykies-time.workspace = true

# For native compilation only
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
actix-web.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true
tracing-subscriber = { workspace = true, features = ["registry", "env-filter"] }

[dev-dependencies]
rstest.workspace = true
static_assertions.workspace = true

[features]
default = []
server_only = ["dep:sqlx", "dep:db-types"] # Used to control things only the server should create
client_only = [] # Used to control things only the client should create
mysql = ["sqlx/mysql", "db-types/mysql"] # Enables conversion from mysql types
postgres = ["sqlx/postgres", "db-types/postgres"] # Enables conversion from mysql types
