[package]
name = "wykies-time"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
serde.workspace = true
sqlx = { workspace = true, optional = true }
web-time.workspace = true

[features]
default = []
mysql = ["sqlx/mysql"] # Adds conversion support for MySql DB types in sqlx
