[package]
name = "wykies-time"
version = "0.1.0"
edition = "2021"
description = "Simple time wrappers to make mistakes harder to make"

[dependencies]
chrono.workspace = true
db-types = { workspace = true, optional = true }
serde.workspace = true
sqlx = { workspace = true, optional = true }
web-time.workspace = true

[features]
default = []
mysql = ["dep:sqlx", "sqlx/mysql", "db-types/mysql"] # Adds conversion support for MySql DB types in sqlx
postgres = [
  # Adds conversion support for Postgres DB types in sqlx.
  # Warning!!! : Postgres does not support unsigned types (see implication in warning in db-types)
  "dep:sqlx",
  "sqlx/postgres",
  "db-types/postgres",
]
